@@ -1,5 +1,6 @@
 
 innoextract 1.7 (TDB)
+ - Added (preliminary) support for Inno Setup 5.6.0 installers
  - Fixed building in paths that contain regex expressions
  - Fixed case-sensitivity in parent directory when creating subdirectories
 
